<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.task_4.ui.DatailsPersonsActivity">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/put_name_et"

        />
    android:layout_alignParentEnd="true"
    <EditText
        android:id="@+id/et_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/put_last_name_et_txt"
        android:layout_below="@+id/et_name"
        />
    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/put_phone_et_txt"
        android:layout_alignParentEnd="true"
        />
    <EditText
        android:id="@+id/et_skype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/put_skype_et_txt"
        android:layout_below="@id/et_phone"
        android:layout_alignParentEnd="true"
        />
    <EditText
        android:id="@+id/et_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/put_mail_et_txt"
        android:layout_below="@id/et_skype"
        android:layout_alignParentEnd="true"
        />
    <Button
        android:id="@+id/btn_mane_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_btn_txt"
        android:layout_alignParentBottom="true"

        />
</RelativeLayout>
